--- a/src/main/resources/assets/baersadditions/models/item/pokeasub_tome_3d.json
+++ b/src/main/resources/assets/baersadditions/models/item/pokeasub_tome_3d.json
@@ -1,7 +1,7 @@
 {
 	"credit": "Made with Blockbench",
 	"textures": {
-		"0": "baersadditions:item/pokeasub"
+		"0": "baersadditions:item/pokeasub_tome"
 	},
 	"elements": [
 		{
